--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-Confessions-of-a-Beachcomber_5113
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Banfield, E. J. (Edmund James)
@@ -10,6 +13,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/1701
     wikipedia: http://en.wikipedia.org/wiki/Edmund_James_Banfield
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/5113#The-Confessions-of-a-Beachcomber
 gutenberg_bookshelf: Australia
 gutenberg_issued: '2004-02-01'
 gutenberg_type: Text
